--- a/examples/events/removeImage.html
+++ b/examples/events/removeImage.html
@@ -42,6 +42,7 @@
   <script src="../../js/plugins/font_size.min.js"></script>
   <script src="../../js/plugins/block_styles.min.js"></script>
   <script src="../../js/plugins/video.min.js"></script>
+  <script src="../../js/plugins/lists.min.js"></script>
 
   <script>
       $(function(){
