--- a/examples/textarea.html
+++ b/examples/textarea.html
@@ -44,7 +44,8 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false})
+          $('#edit')
+            .editable({inlineMode: false})
       });
   </script>
 </body>
