--- a/examples/events/blur.html
+++ b/examples/events/blur.html
@@ -19,7 +19,7 @@
 
 <body>
   <section id="editor">
-      <div id='edit' style="margin-top: 30px;">
+      <div class='edit' style="margin-top: 30px;">
           <img class="fr-fir" src="../../img/old_clock.jpg" alt="Old Clock" width="300"/>
 
           <h1>Click and edit</h1>
@@ -48,11 +48,11 @@
 
   <script>
       $(function(){
-        $('#edit').editable({
+        $('.edit').editable({
           inlineMode: false
         });
 
-        $('#edit').on('editable.blur', function (e, editor) {
+        $('.edit').on('editable.blur', function (e, editor) {
           console.log ('blur');
         })
       });
