--- a/examples/predefined_link_list.html
+++ b/examples/predefined_link_list.html
@@ -39,7 +39,7 @@
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
-  <script src="../../unminified/dist/js/plugins/tables.js"></script>
+  <script src="../js/plugins/tables.min.js"></script>
   <script src="../js/plugins/lists.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
   <script src="../js/plugins/font_family.min.js"></script>
