--- a/examples/events/blur_and_focus.html
+++ b/examples/events/blur_and_focus.html
@@ -21,7 +21,7 @@
   <section id="editor">
       <input type="text"/>
       <div class='edit' style="margin-top: 30px;">
-          <img class="fr-fir" src="../../img/old_clock.jpg" alt="Old Clock" width="300"/>
+          <img class="fr-fir" src="../../img/photo1.jpg" alt="Old Clock" width="300"/>
 
           <h1>Click and edit</h1>
 
