--- a/examples/iframe/content.html
+++ b/examples/iframe/content.html
@@ -21,7 +21,7 @@
 
 <body>
   <div id='edit' style="margin-top: 30px;">
-    <img class="fr-fir" src="../../img/old_clock.jpg" alt="Old Clock" width="300"/>
+    <img class="fr-fir" src="../../img/photo1.jpg" alt="Old Clock" width="300"/>
 
     <h1>Click and edit</h1>
 
