--- a/examples/fullscreen.html
+++ b/examples/fullscreen.html
@@ -59,7 +59,8 @@
       $(function(){
         $('#edit').editable({
           inlineMode: false,
-          buttons: $.merge(['fullscreen'], $.Editable.DEFAULTS.buttons)
+          buttons: $.merge(['fullscreen'], $.Editable.DEFAULTS.buttons),
+          maxHeight: 300
         })
       });
   </script>
