--- a/examples/textarea.html
+++ b/examples/textarea.html
@@ -22,8 +22,7 @@
 <body>
   <section id="editor">
     <form>
-      <textarea id='edit' style="margin-top: 30px;">
-      </textarea>
+      <textarea id='edit' style="margin-top: 30px;"></textarea>
 
       <input type="submit">
     </form>
