--- a/examples/file_upload.html
+++ b/examples/file_upload.html
@@ -43,7 +43,11 @@
 
   <script>
       $(function(){
-        $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'underline', 'createLink', 'uploadFile', 'html']})
+        $('#edit')
+          .editable({inlineMode: false, buttons: ['bold', 'italic', 'underline', 'createLink', 'uploadFile', 'html']})
+          .on('editable.fileUploaded', function (e, editor, file_name, link, response) {
+            console.log (response);
+          })
       });
   </script>
 </body>
