--- a/examples/basic.html
+++ b/examples/basic.html
@@ -52,6 +52,7 @@
   <script src="../js/plugins/video.min.js"></script>
   <script src="../js/plugins/char_counter.min.js"></script>
   <script src="../js/plugins/entities.min.js"></script>
+  <script src="../js/plugins/urls.min.js"></script>
 
   <script>
       $(function(){
