--- a/html/textarea.html
+++ b/html/textarea.html
@@ -30,7 +30,7 @@
 <body>
   <div id="editor">
     <form>
-      <textarea id='edit' style="margin-top: 30px;"></textarea>
+      <textarea id='edit' style="margin-top: 30px;" placeholder="Type some text"></textarea>
 
       <input type="submit">
     </form>
@@ -62,7 +62,7 @@
               return false;
             })
           })
-          .froalaEditor({enter: $.FroalaEditor.ENTER_P})
+          .froalaEditor({enter: $.FroalaEditor.ENTER_P, placeholderText: null})
       });
   </script>
 </body>
