--- a/html/boostrap/modal.html
+++ b/html/boostrap/modal.html
@@ -89,6 +89,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
   <script type="text/javascript" src="../../js/froala_editor.min.js" ></script>
   <script type="text/javascript" src="../../js/plugins/align.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/code_beautifier.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/code_view.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/colors.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/emoticons.min.js"></script>
