--- a/html/disable_edit.html
+++ b/html/disable_edit.html
@@ -116,6 +116,7 @@
   <script type="text/javascript" src="../js/froala_editor.min.js" ></script>
 
   <script type="text/javascript" src="../js/plugins/align.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/code_beautifier.min.js"></script>
   <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
   <script type="text/javascript" src="../js/plugins/colors.min.js"></script>
   <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
