--- a/html/SweetDay/index.html
+++ b/html/SweetDay/index.html
@@ -199,7 +199,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
 
-    <script type="text/javascript" src="../../js/froala_editor.min.js" ></script>
+    <script type="text/javascript" src="../../../udist/js/froala_editor.js" ></script>
 
     <script type="text/javascript" src="../../js/plugins/align.min.js"></script>
     <script type="text/javascript" src="../../js/plugins/code_beautifier.min.js"></script>
