--- a/html/SweetDay/index.html
+++ b/html/SweetDay/index.html
@@ -229,7 +229,8 @@
       var opts = {
         toolbarInline: true,
         toolbarButtons: ['bold', 'italic', 'underline', 'paragraphFormat'],
-        initOnClick: true
+        initOnClick: true,
+        enter: $.FroalaEditor.ENTER_BR
       };
 
       $('.container').find('h1, h2, h3, p, a, img').froalaEditor(opts);
