--- a/html/SweetDay/index.html
+++ b/html/SweetDay/index.html
@@ -233,7 +233,7 @@
         enter: $.FroalaEditor.ENTER_BR
       };
 
-      $('.container').find('h1, h2, h3, p, a, img').froalaEditor(opts);
+      $('.container').find('h1, h2, h3, p, a, img, button').froalaEditor(opts);
     </script>
   </body>
 </html>
