--- a/html/iframe.html
+++ b/html/iframe.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/froala_style.css">
   <link rel="stylesheet" href="../css/plugins/code_view.css">
   <link rel="stylesheet" href="../css/plugins/colors.css">
+  <link rel="stylesheet" href="../css/plugins/draggable.css">
   <link rel="stylesheet" href="../css/plugins/emoticons.css">
   <link rel="stylesheet" href="../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../css/plugins/image.css">
