--- a/html/iframe.html
+++ b/html/iframe.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/plugins/colors.css">
   <link rel="stylesheet" href="../css/plugins/draggable.css">
   <link rel="stylesheet" href="../css/plugins/emoticons.css">
+  <link rel="stylesheet" href="../css/plugins/fullscreen.css">
   <link rel="stylesheet" href="../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../css/plugins/image.css">
   <link rel="stylesheet" href="../css/plugins/line_breaker.css">
@@ -73,6 +74,7 @@
   <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image_manager.min.js"></script>
   <script type="text/javascript" src="../js/plugins/line_breaker.min.js"></script>
